# calc

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: main.py  reduce_rpn.py  rpn_builder.py
test/: test_reduce_rpn.py  test_rpn_builder.py
tests/: test_reduce_rpn.py  test_rpn_builder.py
